[gd_scene load_steps=8 format=3 uid="uid://0d5l8ticweb1"]

[ext_resource type="PackedScene" uid="uid://cjw36056lh3pj" path="res://units/castle_units/base_castle_unit/base_castle_unit.tscn" id="1_w325e"]
[ext_resource type="Texture2D" uid="uid://dxf6fl1l2cnhu" path="res://sprites/castle/draw_bridge/closed_02.png" id="2_taxes"]
[ext_resource type="Script" path="res://units/castle_units/draw_bridge/actions.gd" id="3_g8kyd"]
[ext_resource type="Texture2D" uid="uid://c4xim0vavc4ri" path="res://sprites/castle/draw_bridge/open_02.png" id="3_l75jm"]
[ext_resource type="Script" path="res://units/castle_units/draw_bridge/area_2d.gd" id="3_pv7uf"]
[ext_resource type="Texture2D" uid="uid://2qvga4xod4uv" path="res://sprites/castle/draw_bridge/open_01.png" id="4_5ml3l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4ajq"]
size = Vector2(32, 32)

[node name="draw_bridge" instance=ExtResource("1_w325e")]

[node name="base_sprite" parent="spriteNode" index="0"]
texture = ExtResource("2_taxes")

[node name="sprites_open" type="Node2D" parent="." index="1"]
visible = false
z_index = -1

[node name="Sprite2D" type="Sprite2D" parent="sprites_open" index="0"]
modulate = Color(0.423651, 0.423651, 0.423651, 1)
texture = ExtResource("3_l75jm")

[node name="Sprite2D2" type="Sprite2D" parent="sprites_open" index="1"]
position = Vector2(0, 32)
texture = ExtResource("3_l75jm")

[node name="Sprite2D3" type="Sprite2D" parent="sprites_open" index="2"]
position = Vector2(0, 64)
texture = ExtResource("3_l75jm")

[node name="Sprite2D4" type="Sprite2D" parent="sprites_open" index="3"]
position = Vector2(0, 96)
texture = ExtResource("3_l75jm")

[node name="Sprite2D5" type="Sprite2D" parent="sprites_open" index="4"]
position = Vector2(0, 128)
texture = ExtResource("3_l75jm")

[node name="Sprite2D6" type="Sprite2D" parent="sprites_open" index="5"]
position = Vector2(0, 160)
texture = ExtResource("4_5ml3l")

[node name="actions" type="Node2D" parent="." index="2"]
script = ExtResource("3_g8kyd")

[node name="Area2D" type="Area2D" parent="." index="3"]
script = ExtResource("3_pv7uf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("RectangleShape2D_e4ajq")

[node name="close_door" type="Timer" parent="." index="4"]
one_shot = true

[node name="open_door" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="timeout" from="close_door" to="actions" method="_on_close_door_timeout"]
[connection signal="timeout" from="open_door" to="actions" method="_on_open_door_timeout"]
